Bug: Fixing alignment 3

--- a/style3.css
+++ b/style3.css
@@ -112,5 +112,9 @@ html{
 h1{
     alignment:center;
 }
+p{
+    alignment:center
+    width:fit-content;
+}
 
 
